# JsonEditor

./: .gitignore  README.md  UPDATE_LOG.md  index.html  install.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: conf.rs  main.rs  utils.rs
src-tauri/src/app/: cmd.rs  menu.rs  setup.rs
src/utils/: copyToClipboard.ts
